Update d_text to be d_text[]

--- a/src/htdocs/js/languages/en.json
+++ b/src/htdocs/js/languages/en.json
@@ -168,7 +168,7 @@
       ]
     },
 
-    "d_text": {
+    "d_text[]": {
       "label": "Was there any damage to the building?",
       "multiSelect": true,
       "answers": [
